@@ -1,5 +1,9 @@
 2012-06-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
+	* interp/newaux.lisp: Move Led property setting to spad-parser.boot.
+
+2012-06-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
 	* interp/newaux.lisp: Move Nud property setting to spad-parser.boot.
 	Import sys-utility.
 	* interp/Makefile.in: Adjust.
